--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -27,6 +25,7 @@
             android:label="PM2.5"
             android:screenOrientation="portrait" />
         <activity android:name=".webview_1" />
+        <activity android:name=".info"></activity>
     </application>
 
 </manifest>
